--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ I am accustomed to working in a systematic, analytical, and adaptive manner acro
 </div>
 </div>
 
-<a class="btn" href="https://nflakhrnnsa.github.io/FLOODDIYMAP/" target="_blank">
+<a class="btn" href="https://faisalrendra.github.io/WEBGIS-BENCANA-BANJIR-DIY/" target="_blank">
 Explore Website
 </a>
 </div>
@@ -492,3 +492,4 @@ popup.onclick=()=>popup.style.display="none";
 
 </body>
 </html>
+
